# tpgtools

./: CMakeLists.txt  README.md  conftest.py  pytest.ini  requirements.txt
apps/: check_fragment_TPs.cxx  streamed_TPs_to_text.cxx  wib2_binary_frame_modifier.cxx  wib2_binary_frame_reader.cxx  wib2_tpg_algorithms_emulator.cxx  wibeth_binary_frame_modifier.cxx  wibeth_binary_frame_reader.cxx  wibeth_tpg_algorithms_emulator.cxx  wibeth_tpg_pattern_generator.cxx  wibeth_tpg_validation.cxx  wibeth_tpg_workload_emulator.cxx
cmake/: tpgtoolsConfig.cmake.in
docs/: README.md
include/: TPGUtils.hpp
include/tpgtools/: TPGEmulator.hpp  TPGPatternAlgorithms.hpp  TPGPatternGenerator.hpp  TPGToolsIssues.hpp
python/: cluster_finder.py  cluster_maker.py  group_maker.py  hdf5_converter.py  image_creator.py  properties_plotter.py  utils.py
scripts/: .gitignore  compare_avx_vs_naive.py  create_image.py  create_images.py  plot_tp_properties.py  plot_trigprim_output_data.py  test_tpg_implementation_bundle.sh
src/: TPGEmulator.cpp
tests/: test_tpg_implementation.py
